package edu.hitsz.prop;

/**
 * 道具类型枚举
 * @author laijr
 */
public enum PropTypeEnum {
    BLOOD,
    BULLET,
    BOMB,
    BULLET_PLUS
}


